# TestCApp

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/huolala/testcapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/huolala/testcapp/: MainActivity.kt  TestPageActivity.kt
app/src/main/res/layout/: activity_main.xml  test_page_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/huolala/testcapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: CMakeLists.txt  build.gradle
mylibrary/src/androidTest/java/cn/huolala/mylibrary/: ExampleInstrumentedTest.kt
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: common.cpp  common.h  cstring.cpp  cstring.h  dynamic-ram.cpp  dynamic-ram.h  exception.cpp  exception.h  file-stream.cpp  file-stream.h  log.h  mutithread.cpp  mutithread.h  native-lib.cpp  place-holder.cpp  place-holder.h  pointer-array.cpp  pointer-array.h  pointer.cpp  pointer.h  reference.cpp  reference.h  signal-test.cpp  signal-test.h  string.cpp  string.h  struct.cpp  struct.h  test-class.cpp  test-class.h  test-define.cpp  test-define.h  test-namespace.cpp  test-namespace.h  test-namespace1.h  test-namespace2.h  test-template.cpp  test-template.h  time-date.cpp  time-date.h  (+2 more)
mylibrary/src/main/java/cn/huolala/mylibrary/: Arithmetic.java
mylibrary/src/test/java/cn/huolala/mylibrary/: ExampleUnitTest.kt
